--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             <div class="enlaces">
                 <li><a href="#people">People say</a></li>
                 <li><a href="#contacto">Contact</a></li>
-                <li><a href="http://127.0.0.1:5500/educational.html#habilidades#aboutMe2">About me</a></li>
+                <li><a href="https://briklassen.github.io/educational.html#aboutMe2">About me</a></li>
             </div>
 
         </nav>
@@ -77,13 +77,13 @@
             </p>
             <div class="beneficios">
                 <div class="beneficio resume">
-                    <a href="http://127.0.0.1:5500/educational.html#habilidades"><h3>CV</h3></a>
+                    <a href="https://briklassen.github.io/educational.html#habilidades"><h3>CV</h3></a>
                 </div>
                 <div class="beneficio school">
-                    <a href="http://127.0.0.1:5500/educational.html#perfilAcademico"><h3>Formación académica</h3></a>
+                    <a href="https://briklassen.github.io/educational.html#perfilAcademico"><h3>Formación académica</h3></a>
                 </div>
                 <div class="beneficio extra">
-                    <a href="http://127.0.0.1:5500/educational.html#extra"><h3>Actividades extracurriculares</h3></a>
+                    <a href="https://briklassen.github.io/educational.html#extra"><h3>Actividades extracurriculares</h3></a>
                 </div>
             </div>
         </section>
