--- a/educational.html
+++ b/educational.html
@@ -354,7 +354,8 @@
 
     <footer>
         <div class="contenedor" id="contacto">
-            <h2 class="titulo-seccion">Contact us</h2>
+            <h2 class="titulo-seccion">Get in touch</h2>
+            <!-- <h2 class="titulo-seccion">Contact us</h2> -->
             <!-- <p class="copy__footer">
                 Lorem ipsum dolor sit amet consectetur adipisicing.
             </p> -->
@@ -363,7 +364,6 @@
             <form class="form" action="https://formspree.io/f/mwkagvpl"
             method="POST">
                 <div class="form__container">
-                    <h2 class="copy__footer">Get in touch</h2>
                     <input type="text" class="copy__form form__input" placeholder="Name:">
                     <input type="email" class="copy__form form__input" placeholder="Email:" name="_replyto">
                     <textarea class="copy__form copy__form--message" placeholder="Message:" name="message"></textarea>
