--- a/index.html
+++ b/index.html
@@ -26,14 +26,14 @@
     <meta property="og:url" content="">
     <meta property="og:title" content="Britanny Melissa Klassen González">
     <meta property="og:description" content="Soy Ingeniera Química especializada en el área de materiales.">
-    <meta property="og:img" content="">
+    <meta property="og:img" content="https://images.unsplash.com/photo-1597852615794-7cf67421d3ca?ixid=MnwxMjA3fDB8MHxzZWFyY2h8MTgwfHxiZWV8ZW58MHwwfDB8fA%3D%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=60">
     
     <!-- Open Graph / Twitter -->
     <meta property="twitter:card" content="website">
     <meta property="twitter:url" content="">
     <meta property="twitter:title" content="Britanny Melissa Klassen González">
     <meta property="twitter:description" content="Soy Ingeniera Química especializada en el área de materiales.">
-    <meta property="twitter:img" content="">
+    <meta property="twitter:img" content="https://images.unsplash.com/photo-1597852615794-7cf67421d3ca?ixid=MnwxMjA3fDB8MHxzZWFyY2h8MTgwfHxiZWV8ZW58MHwwfDB8fA%3D%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=60">
     <!-- meta etiquetas -->
 </head>
 
@@ -66,29 +66,29 @@
 
         </section>
     </header>
-    <main>
 
+    <main>
         <!-- Bienvenido -->
         <section class="contenedor bienvenido">
             <!-- h2.titulo-seccion{Bienvenido}+p{lorem}+.beneficios>(.beneficio>h3{Beneficio})*3 -->
-            <h2 class="titulo-seccion" id="perfil">Bienvenido</h2>
+            <h2 class="titulo-seccion" id="perfil">Welcome</h2>
             <p class="copy">
-                Técnica Agropecuaria. | Estudiante de <abbr title="Ingeniería Química">I.Q.</abbr>
+                Agricultural technician. | Chemical Engineering Student
+                <abbr title="Chemical Engineering">I.Q.</abbr>
             </p>
             <div class="beneficios">
                 <div class="beneficio resume">
                     <a href="https://briklassen.github.io/educational.html#habilidades"><h3>CV</h3></a>
                 </div>
                 <div class="beneficio school">
-                    <a href="https://briklassen.github.io/educational.html#perfilAcademico"><h3>Formación académica</h3></a>
+                    <a href="https://briklassen.github.io/educational.html#perfilAcademico"><h3>Academic profile</h3></a>
                 </div>
                 <div class="beneficio extra">
-                    <a href="https://briklassen.github.io/educational.html#extra"><h3>Actividades extracurriculares</h3></a>
+                    <a href="https://briklassen.github.io/educational.html#extra"><h3>Extracurricular activities</h3></a>
                 </div>
             </div>
         </section>
         <!-- Bienvenido -->
-
         <!-- Pasatiempos -->
         <section class="projects">
             <div class="contenedor contenedor__pasatiempos" id="pasatiempos">
@@ -145,7 +145,6 @@
             <!-- .contenedor>h2.titulo-seccion{Our project}+p.copy{Lorem}+.contenedor-imagenes>(img*3) -->
         </section> 
         <!-- Pasatiempos -->
-
         <!-- Recomendaciones -->
         <section class="recomendaciones" id="people">
             <h2 class="titulo-seccion">People say</h2>
@@ -192,7 +191,7 @@
 
     <footer>
         <div class="contenedor">
-            <h2 class="titulo-seccion" id="contacto">Contact us</h2>
+            <h2 class="titulo-seccion" id="contacto">Get in touch</h2>
             <!-- <p class="copy__footer">
                 Lorem ipsum dolor sit amet consectetur adipisicing.
             </p> -->
@@ -201,7 +200,6 @@
             <form class="form" action="https://formspree.io/f/mwkagvpl"
             method="POST">
                 <div class="form__container">
-                    <h2 class="copy__footer">Get in touch</h2>
                     <input type="text" class="copy__form form__input" placeholder="Name:">
                     <input type="email" class="copy__form form__input" placeholder="Email:" name="_replyto">
                     <textarea class="copy__form copy__form--message" placeholder="Message:" name="message"></textarea>
