--- a/index.html
+++ b/index.html
@@ -73,8 +73,8 @@
             <!-- h2.titulo-seccion{Bienvenido}+p{lorem}+.beneficios>(.beneficio>h3{Beneficio})*3 -->
             <h2 class="titulo-seccion" id="perfil">Welcome</h2>
             <p class="copy">
-                Agricultural technician. | Chemical Engineering Student
-                <abbr title="Chemical Engineering">I.Q.</abbr>
+                Agricultural Technician. | Chemical Engineering Student
+                <!-- <abbr title="Chemical Engineering">I.Q.</abbr> -->
             </p>
             <div class="beneficios">
                 <div class="beneficio resume">
