--- a/educational.html
+++ b/educational.html
@@ -370,6 +370,7 @@
                     <input type="submit" value="Send" class="form__cta">
                 </div>
             </form>
+            <h2 class="titulo-seccion"><a href="index.html">Home</a></h2>
             <!-- Formulario de contacto -->
         
             <!-- <div class="redes-sociales"> -->
