--- a/educational.html
+++ b/educational.html
@@ -25,14 +25,14 @@
     <meta property="og:url" content="https//britannyklassen.github.io">
     <meta property="og:title" content="Britanny Melissa Klassen González">
     <meta property="og:description" content="Soy Ingeniera Química especializada en el área de materiales.">
-    <meta property="og:imgage" content="https//britannyklassen.github.io/images/css.jpg">
+    <meta property="og:imgage" content="https://images.unsplash.com/photo-1597852615794-7cf67421d3ca?ixid=MnwxMjA3fDB8MHxzZWFyY2h8MTgwfHxiZWV8ZW58MHwwfDB8fA%3D%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=60">
     
     <!-- Open Graph / Twitter -->
     <meta property="twitter:card" content="website">
     <meta property="twitter:url" content="https//britannyklassen.github.io">
     <meta property="twitter:title" content="Britanny Melissa Klassen González">
     <meta property="twitter:description" content="Soy Ingeniera Química especializada en el área de materiales.">
-    <meta property="twitter:img" content="https//britannyklassen.github.io/images/css.jpg">
+    <meta property="twitter:img" content="https://images.unsplash.com/photo-1597852615794-7cf67421d3ca?ixid=MnwxMjA3fDB8MHxzZWFyY2h8MTgwfHxiZWV8ZW58MHwwfDB8fA%3D%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=60">
     <!-- meta etiquetas -->
 
 </head>
