--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <nav class="menu-nav contenedor">
             
             <div class="logo">
-                <img src="https://scontent.fmex25-1.fna.fbcdn.net/v/t1.6435-9/43823120_1012500622256250_6591611924079706112_n.jpg?_nc_cat=101&ccb=1-5&_nc_sid=09cbfe&_nc_eui2=AeHFDWEzWEEKvelPPcq15OWEH4q14U3lKScfirXhTeUpJ4SlCJS538hcaKu0abHk-ak7umnJ5l03zaCUyWvJZbr-&_nc_ohc=55QQwq0zrUsAX-quuD6&_nc_ht=scontent.fmex25-1.fna&oh=0887d65a8699b54b1d7d33e57a07d95a&oe=61B210E6" alt="Fotografía de Britanny Klasse">
+                <img src="assets/BMKG_Picture_001.jpg" alt="Fotografía de Britanny Klasse">
             </div>
             
             <div class="enlaces">
@@ -199,9 +199,9 @@
             <form class="form" action="https://formspree.io/f/mwkagvpl"
             method="POST">
                 <div class="form__container">
-                    <input type="text" class="copy__form form__input" placeholder="Name:">
-                    <input type="email" class="copy__form form__input" placeholder="Email:" name="_replyto">
-                    <textarea class="copy__form copy__form--message" placeholder="Message:" name="message"></textarea>
+                    <input type="text" class="copy__form form__input" placeholder="Name:" required>
+                    <input type="email" class="copy__form form__input" placeholder="Email:" name="_replyto" required>
+                    <textarea class="copy__form copy__form--message" placeholder="Message:" name="message" required></textarea>
                     <input type="submit" value="Send" class="form__cta">
                 </div>
             </form>
