--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
                 <div class="form__container">
                     <input type="text" class="copy__form form__input" placeholder="Name:" required>
                     <input type="email" class="copy__form form__input" placeholder="Email:" name="_replyto" required>
-                    <textarea class="copy__form copy__form--message" placeholder="Message:" name="message" required></textarea>
+                    <!-- <textarea class="copy__form copy__form--message" placeholder="Message:" name="message" required></textarea> -->
                     <input type="submit" value="Send" class="form__cta">
                 </div>
             </form>
